# Magicwindows

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build.yml
docs/: CONTRIBUTING.md
docs/superpowers/plans/: 2026-04-17-mac-style-modifiers.md
docs/superpowers/specs/: 2026-04-16-character-based-detection-design.md  2026-04-17-mac-style-modifiers-design.md
layouts/: apple-fr-azerty.json  schema.json
scripts/: Install-Layout.ps1  Uninstall-Layout.ps1  build-detection-catalogue.mjs  scancode-map.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/keyboard/: detect.rs  install.rs  kbd_c.rs  klc.rs  mod.rs  scancode_map.rs
src/components/: KeyboardVisual.svelte
src/lib/: detection.test.ts  detection.ts  i18n.ts  stores.svelte.ts  stores.ts  types.ts
src/pages/: Detect.svelte  Done.svelte  Install.svelte  Modifiers.svelte  Preview.svelte  Select.svelte  Welcome.svelte
