[package]
name = "magicwindows"
version = "0.1.0"
description = "Install Apple Magic Keyboard layouts on Windows"
authors = ["ObzCure"]
license = "Apache-2.0"
repository = "https://github.com/ObzCureDev/Magicwindows"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "magicwindows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
